src/QDialog.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQDialogCtor(void * parent, int  f);
EXTERNC void * SCWQDialogCtor(void * parent, int  f);
EXTERNC int32_t QWQDialogresult(void * obj);
EXTERNC void QWQDialogsetVisible(void * obj, int8_t  visible);
EXTERNC void QWQDialogsetOrientation(void * obj, int  orientation);
EXTERNC int QWQDialogorientation(void * obj);
EXTERNC void QWQDialogsetExtension(void * obj, void * extension);
EXTERNC void * QWQDialogextension(void * obj);
EXTERNC void * QWQDialogminimumSizeHint(void * obj);
EXTERNC void QWQDialogsetSizeGripEnabled(void * obj, int8_t  arg1);
EXTERNC int8_t QWQDialogisSizeGripEnabled(void * obj);
EXTERNC void QWQDialogsetModal(void * obj, int8_t  modal);
EXTERNC void QWQDialogsetResult(void * obj, int32_t  r);
EXTERNC void QWQDialogopen(void * obj);
EXTERNC int32_t QWQDialogexec(void * obj);
EXTERNC void QWQDialogdone(void * obj, int32_t  arg1);
EXTERNC void QWQDialogaccept(void * obj);
EXTERNC void QWQDialogreject(void * obj);
EXTERNC void QWvalidateCB_QDialog(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQDialogDtor(void *);
EXTERNC void SCWQDialogDtor(void *);